--- a/main.html
+++ b/main.html
@@ -8,6 +8,16 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div id="main-container">
+        <div class="testimonial">
+            <p class="text">"This is an amazing product! I highly recommend it to everyone."</p>
+            <p class="author">- John Doe</p>
+        </div>
+        <div class="testimonial">
+            <p class="text">"Excellent customer service and a great value for the price."</p>
+            <p class="author">- Jane Smith</p>
+        </div>
+    </div>
     <script type="text/javascript" src="./script.js">
 </script>
 
