--- a/main.html
+++ b/main.html
@@ -9,6 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div id="main-container">
+		<h1 class="heading">Testimonials</h1>
         <div class="testimonial">
             <p class="text">"This is an amazing product! I highly recommend it to everyone."</p>
             <p class="author">- John Doe</p>
